Update and rename Mariano N_1725880_7.01 Honors Project.html to index.html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-
+<!-- Mariano N_1725880_7.01 Honors Project -->
 <head>
   <meta charset="utf-8">
   <title>Geometry Honors Project</title>
